<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_solid_curved_white">

    <TextView
        android:id="@+id/tvLabelSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="@string/label_success"
        android:textSize="@dimen/textSizeMedium"
        android:layout_marginTop="@dimen/dimens_16"
        android:textColor="@color/black"
        android:lineSpacingExtra="6sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAnimation"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="@dimen/dimens_16"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelSuccess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_solid_round_light_grey"/>

    <TextView
        android:id="@+id/tvlabelSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_guru_added_successfully"
        android:layout_marginTop="@dimen/dimens_16"
        android:textSize="@dimen/textSizeMedium"
        android:lineSpacingExtra="6sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/ivAnimation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_text_ok"
        android:backgroundTint="@color/green"
        android:layout_marginTop="@dimen/dimens_20"
        android:layout_marginStart="@dimen/dimens_12"
        android:layout_marginEnd="@dimen/dimens_12"
        android:lineSpacingExtra="10sp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintTop_toBottomOf="@+id/tvlabelSuccess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>