<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_solid_curved_white">

    <TextView
        android:id="@+id/tvGuruName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_semibold"
        tools:text="Chakri Abhi"
        android:textSize="@dimen/textSizeMedium"
        android:layout_marginTop="@dimen/dimens_12"
        android:textColor="@color/black"
        android:lineSpacingExtra="6sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLabelGuruName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_guru_name"
        android:layout_marginTop="@dimen/dimens_16"
        android:layout_marginStart="@dimen/dimens_16"
        android:textColor="@color/textSecondary"
        android:fontFamily="@font/source_sans_pro_semibold"
        app:layout_constraintTop_toBottomOf="@+id/tvGuruName"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etGuruName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginEnd="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_6"
        android:background="@drawable/bg_stroke_semi_curved_lightgrey"
        android:lineSpacingExtra="6sp"
        tools:text="Shivam Sharma"
        android:paddingStart="@dimen/dimens_16"
        android:hint="@string/hint_enter_a_name"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelGuruName"/>

    <Button
        android:id="@+id/btnUpdateName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_text_update"
        android:backgroundTint="@color/green"
        android:layout_marginTop="@dimen/dimens_20"
        android:layout_marginStart="@dimen/dimens_12"
        android:layout_marginEnd="@dimen/dimens_12"
        android:lineSpacingExtra="10sp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintTop_toBottomOf="@+id/etGuruName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>