<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    tools:context=".ui.makeAsGuru.MakeAsGuruActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.045"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.955"/>

    <View
        android:id="@+id/view_underlay"
        android:layout_width="0dp"
        android:layout_height="275dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="0dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/dimens_24"
            android:layout_height="@dimen/dimens_24"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lineSpacingExtra="7sp"
            android:text="K11 Guru"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMedium2" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/guruScratchCard"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_scratch_card"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintEnd_toEndOf="@+id/gl_end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_bold"
        android:lineSpacingExtra="-12sp"
        android:text="₹50"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/guruScratchCard"
        app:layout_constraintEnd_toEndOf="@+id/guruScratchCard"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/guruScratchCard"
        app:layout_constraintTop_toTopOf="@+id/guruScratchCard"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Credit your Guru"
        android:fontFamily="@font/source_sans_pro_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="6sp"
        app:layout_constraintTop_toBottomOf="@+id/view_underlay"/>

    <TextView
        android:id="@+id/tvSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:lineSpacingExtra="6sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        android:text="@string/credit_guru_and_earn"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/findGuruView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_stroke_curved_grey"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/tvSubHeader">

        <EditText
            android:id="@+id/etGuruCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:maxLength="6"
            android:inputType="textCapCharacters"
            android:lineSpacingExtra="6sp"
            android:hint="@string/hint_enter_six_digit_code"
            android:textSize="@dimen/textSizeNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/findButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/findButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/green"
            android:paddingStart="16dp"
            android:paddingTop="6dp"
            android:paddingEnd="16dp"
            android:paddingBottom="6dp"
            android:text="@string/button_text_find"
            android:textSize="@dimen/textSizeMini"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:lineSpacingExtra="4sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:textSize="@dimen/textSizeNormal"
        android:text="@string/guru_customer_support_helpline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvSupportMail"/>

    <TextView
        android:id="@+id/tvSupportMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="support@kaptain11.com"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/dimens_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>