<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_solid_curved_white">

    <TextView
        android:id="@+id/tvLabelGuru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="@string/label_guru"
        android:textSize="@dimen/textSizeMedium"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:lineSpacingExtra="6sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCancel"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_cancel"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tvLabelConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_to_make_guru"
        android:textSize="@dimen/textSizeNormal"
        android:lineSpacingExtra="6sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelGuru"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/guruCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="BGY32A"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeNormal"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="6sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelConfirmation"
        />


    <ImageView
        android:id="@+id/ivGuruProfileImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/guruCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_solid_round_light_grey"/>

    <TextView
        android:id="@+id/tvGuruProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ranjith"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:textSize="@dimen/textSizeNormal"
        android:lineSpacingExtra="6sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/ivGuruProfileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivFollowers"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_followers"
        app:layout_constraintTop_toTopOf="@+id/tvGuruFollowersCount"
        app:layout_constraintBottom_toBottomOf="@+id/tvGuruFollowersCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvGuruFollowersCount"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tvGuruFollowersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="52"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:lineSpacingExtra="6sp"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/textSizeNormal"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tvGuruProfileName"
        app:layout_constraintStart_toEndOf="@+id/ivFollowers"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnMakeMyGuru"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_text_make_my_guru"
        android:backgroundTint="@color/green"
        android:layout_marginTop="@dimen/dimens_20"
        android:layout_marginStart="@dimen/dimens_12"
        android:layout_marginEnd="@dimen/dimens_12"
        android:lineSpacingExtra="10sp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintTop_toBottomOf="@+id/tvGuruFollowersCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>